--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap');
 
-/* ############################## >= 1500px ############################## */
+/* ############################## (Screen width) >= 1500px ############################## */
 body {
     padding: 0px 190px;
     font-family: 'Montserrat', sans-serif;
@@ -137,7 +137,6 @@ div.jumbotron div.consultation div h2 {
 
 div.jumbotron div.consultation form {
     display: flex;
-    /* height: 520px; */
     margin: 25px 30px;
     flex-direction: column;
 }
@@ -248,7 +247,7 @@ main div.contents div.details a {
     color: #11519c;
 }
 
-/* ############################## >=992px ############################## */
+/* ############################## 1500px > (Screen width) >= 1366px ############################## */
 @media only screen and (min-width: 1366px) and (max-width: 1500px) {
     body {
         padding: 0 100px;
@@ -259,7 +258,7 @@ main div.contents div.details a {
     }
 }
 
-/* ############################## >=768px ############################## */
+/* ############################## 1366px > (Screen width) >= 768px ############################## */
 @media only screen and (min-width: 768px) and (max-width: 1365px) {
     body {
         padding: 0 100px;
@@ -348,7 +347,6 @@ main div.contents div.details a {
 
     div.jumbotron div.consultation form {
         display: flex;
-        /* height: 520px; */
         margin: 5px 10px;
         flex-direction: column;
     }
@@ -461,7 +459,7 @@ main div.contents div.details a {
     }
 }
 
-/* ############################## <768px ############################## */
+/* ############################## 768px > (Screen width) ############################## */
 @media only screen and (max-width: 767px) {
     body {
         padding: 0 10px;
@@ -485,7 +483,6 @@ main div.contents div.details a {
         font-weight: 300;
         display: none;
         text-transform: uppercase;
-        /* position: absolute; */
     }
 
     header a {
@@ -501,24 +498,17 @@ main div.contents div.details a {
         left: 0;
         top: 0;
         background-color: rgb(0, 0, 0);
-        /* Black fallback color */
         background-color: rgba(0, 0, 0, 0.9);
-        /* Black w/opacity */
         overflow-x: hidden;
-        /* Disable horizontal scroll */
         transition: 0.5s;
     }
 
     .overlay-content {
         position: relative;
         top: 25%;
-        /* 25% from the top */
         width: 100%;
-        /* 100% width */
         text-align: center;
-        /* Centered text/links */
         margin-top: 30px;
-        /* 30px top margin to avoid conflict with the close button on smaller screens */
     }
 
     .overlay a {
@@ -527,9 +517,7 @@ main div.contents div.details a {
         font-size: 36px;
         color: #818181;
         display: block;
-        /* Display block instead of inline */
         transition: 0.3s;
-        /* Transition effects on hover (color) */
     }
 
     .overlay .closebtn {
@@ -602,7 +590,6 @@ main div.contents div.details a {
 
     div.jumbotron div.consultation form {
         display: flex;
-        /* height: 520px; */
         margin: 5px 10px;
         flex-direction: column;
     }
